# deploy-utils

./: .gitlab-ci.yml  Instructions.txt  Pyproject.toml  READ ME.md  README_COMPLETE.md  Temp.txt  environment.yml  pyproject.toml
Apps/: Pyproject.toml
docs/: build.txt  uv_workspace_cheatsheet.md
